syntax = "proto3";

package event_rpc;

message commonMessage {
  string topic = 1;
  bytes message = 2;
}

message commonResponse {
  int32 partition = 1;
  int64 offset = 2;
}

message userActionReq {
  commonMessage common = 1;
  int64 type = 2;
  int64 user_id = 3;
}

service eventRpc{
  rpc userAction(userActionReq) returns (commonResponse);
}